Update convention plugins